# notir

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cli  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cd.yml  ci.yml  release-cli.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  js_runtime.rs  main.rs  output.rs  script_api.rs  ws_client.rs
crates/server/: Cargo.toml
crates/server/src/: broadcast.rs  main.rs  single.rs  tests.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ClipboardPage.tsx  CodeEditor.tsx  WebSocketConfig.tsx
frontend/src/utils/: WebSocketManager.ts
src/: broadcast.rs  main.rs  single.rs  tests.rs
static/: index.html
