[workspace]
resolver = "3"
members = ["crates/server", "crates/cli"]

[workspace.package]
version = "0.1.8"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures-util = "0.3"
