[package]
name = "notir-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "notir-cli"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
rquickjs = { version = "0.9", features = ["full"] }
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
