[package]
name = "notir"
version.workspace = true
edition.workspace = true

[dependencies]
futures-util = { workspace = true }
rust-embed = "8.11"
salvo = { version = "0.93", features = ["websocket", "serve-static", "compression"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["net"] }
dashmap = "6.2"
bytes = "1.11"
nanoid = "0.5"
clap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
